frontend/src/web/components/Input/Input.module.css
.inputContainer {
  position: relative;

  svg {
    fill: none;
  }
}

.input {
  border-radius: 12px;
  border-width: 1px;
  border-style: solid;
  border-color: inherit;

  line-height: 1.5;

  width: 100%;
  padding: 14px;
}

.input::placeholder {
  color: rgba(var(--off-white-rgb), 0.6);
}

.pdLeft {
  padding-left: 48px;
}

.pdRight {
  padding-right: 48px;
}

.normal {
  border-color: rgba(var(--off-white-rgb), 0.3);

  & > svg {
    stroke: rgba(var(--off-white-rgb), 0.8);
  }
}

.success {
  border-color: var(--zombie-kittens);

  & > svg {
    stroke: var(--zombie-kittens);
  }
}

.error {
  border-color: var(--exploding-kittens);

  & > svg {
    stroke: var(--exploding-kittens);
  }
}

.warning {
  border-color: var(--throw-throw-burrito);

  & > svg {
    stroke: var(--throw-throw-burrito);
  }
}

